1. update junit version (suggested by github) 2. update other library version 3. some refactor to test case